--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "cross-env DEV_MODE=true electron .",
+    "dev": "electron . --dev",
     "build": "electron-builder"
   },
   "keywords": ["electron", "rive", "desktop-pet", "animation"],
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "@rive-app/canvas": "^2.0.0",
-    "dotenv": "^16.0.0",
-    "cross-env": "^7.0.3"
+    "dotenv": "^16.0.0"
   }
 }
